[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-yuno"
version = "0.1.3"
description = "Home Assistant custom integration for Yuno Energy Ireland"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "homeassistant>=2024.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-homeassistant-custom-component>=0.13.0,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous"]
ignore_missing_imports = true
